[FIX] border always visible

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center; /* center horizontally */
     align-items: center; /* center vertically */
-    border: 1px solid #7e7e7e;
+    /*border: 1px solid #7e7e7e;*/
     margin-bottom: 12px;
     overflow: scroll;
 }
@@ -12,6 +12,7 @@
 .sr-external-page-content-iframe {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .sr-external-page-content-info {
